--- a/common/pom.xml
+++ b/common/pom.xml
@@ -121,7 +121,66 @@
                 </executions>
             </plugin>
 
+            <!-- Plugin Maven Surefire para módulo common -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- Configuración específica para tests de common -->
+                    <includes>
+                        <include>**/*Test.java</include>
+                        <include>**/*Tests.java</include>
+                        <include>**/Test*.java</include>
+                    </includes>
+                    
+                    <!-- Reportes específicos para common -->
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                    
+                    <!-- Configuración JVM compatible con Java 21 -->
+                    <argLine>-Xmx1024m --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    
+                    <!-- Propiedades del sistema para tests -->
+                    <systemPropertyVariables>
+                        <spring.profiles.active>test</spring.profiles.active>
+                    </systemPropertyVariables>
+                    
+                    <!-- Configuración sin fork para módulo común -->
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
+
+    <!-- Reportes específicos para módulo common -->
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <configuration>
+                    <showSuccess>true</showSuccess>
+                    <linkXRef>true</linkXRef>
+                    <outputName>common-surefire-report</outputName>
+                </configuration>
+            </plugin>
+            
+            <!-- Información específica del módulo common -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>index</report>
+                            <report>summary</report>
+                            <report>dependencies</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
