--- a/ms-courses/pom.xml
+++ b/ms-courses/pom.xml
@@ -159,6 +159,41 @@
 		        </configuration>
 		        </plugin>
 		
+		        <!-- 
+		            Plugin Maven Surefire específico para ms-courses.
+		            Configuración personalizada para tests de cursos.
+		        -->
+		        <plugin>
+		            <groupId>org.apache.maven.plugins</groupId>
+		            <artifactId>maven-surefire-plugin</artifactId>
+		            <configuration>
+		                <!-- Configuración específica para tests de courses -->
+		                <includes>
+		                    <include>**/*Test.java</include>
+		                    <include>**/*Tests.java</include>
+		                    <include>**/Test*.java</include>
+		                </includes>
+		                
+		                <!-- Grupos de tests específicos (opcional) -->
+		                <groups>unit,integration</groups>
+		                
+		                <!-- Reportes específicos para courses -->
+		                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+		                
+		                <!-- Configuración JVM compatible con Java 21 -->
+		                <argLine>-Xmx2048m --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+		                
+		                <!-- Propiedades del sistema para tests -->
+		                <systemPropertyVariables>
+		                    <spring.profiles.active>test</spring.profiles.active>
+		                </systemPropertyVariables>
+		                
+		                <!-- Configuración para evitar forks problemáticos -->
+		                <forkCount>1</forkCount>
+		                <reuseForks>false</reuseForks>
+		            </configuration>
+		        </plugin>
+
 		        <!-- Plugin de compilación - COMENTADO TEMPORALMENTE PARA EVITAR ERRORES DE ANNOTATION PROCESSORS
 		        <plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
@@ -180,5 +215,42 @@
 	        -->
 	    </plugins>
     </build>
+
+    <!-- 
+        Reportes específicos para el módulo ms-courses.
+        Genera navegación hacia el proyecto padre y otros módulos.
+    -->
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <configuration>
+                    <showSuccess>true</showSuccess>
+                    <linkXRef>true</linkXRef>
+                    <outputName>courses-surefire-report</outputName>
+                    
+                    <!-- Enlaces de navegación a otros módulos -->
+                    <reportsDirectory>${project.build.directory}/site</reportsDirectory>
+                </configuration>
+            </plugin>
+            
+            <!-- Información específica del módulo courses -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>index</report>
+                            <report>summary</report>
+                            <report>dependencies</report>
+                            <report>plugin-management</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
