--- a/ms-courses/pom.xml
+++ b/ms-courses/pom.xml
@@ -192,27 +192,26 @@
 		                <forkCount>1</forkCount>
 		                <reuseForks>false</reuseForks>
 		            </configuration>
-		        </plugin>
-
-		        <!-- Plugin de compilación - COMENTADO TEMPORALMENTE PARA EVITAR ERRORES DE ANNOTATION PROCESSORS
-		        <plugin>
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven-compiler-plugin</artifactId>
-		        <configuration>
-		            <parameters>true</parameters>
-		            <annotationProcessorPaths>
-		            <path>
-		                <groupId>org.mapstruct</groupId>
-		                <artifactId>mapstruct-processor</artifactId>
-		            </path>
-		            <path>
-		                <groupId>org.projectlombok</groupId>
-		                <artifactId>lombok</artifactId>
-		            </path>
-		            </annotationProcessorPaths>
-		        </configuration>
+		        </plugin>        <!-- Plugin de compilación con annotation processors -->
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <parameters>true</parameters>
+            <annotationProcessorPaths>
+            <path>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
+            </path>
+            <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </path>
+            </annotationProcessorPaths>
+        </configuration>
 	        </plugin>
-	        -->
 	    </plugins>
     </build>
 
