refactor: Update paths in batch scripts to use consistent project directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Ignore Monolitico project and its contents
 Monolitico/
 
-# Ignore documentation and debug files
-GUIA_RESOLUCION.md
-REORGANIZATION_SUMMARY.md
-DEBUG_LOG.md
-INFORME_PRUEBAS_UNITARIAS.md
+# Ignore documentation and debug files (keep locally, not in repo)
+*.md
+!README.md
